added stuff for giving back

--- a/0.15_DOM.html
+++ b/0.15_DOM.html
@@ -9,6 +9,9 @@
 			<ul id="hotels">
 				<!-- we are going to expect a list of hotels here -->
 				<!-- uls have listed items typically. put textNode in li -->
+				<div id="Hotel.name"></div>
+				<div id="Hotel.rooms"></div>
+				<div id="Hotel.booked"></div>
 			</ul>
 		</div>
 
